--- a/index.html
+++ b/index.html
@@ -211,6 +211,64 @@ code.language-yaml {
       <h1 class="mume-header" id="&#x6570;&#x636E;&#x65B0;&#x95FB;2017&#x8BFE;&#x7A0B;">《数据新闻》2017课程</h1>
 
 <p>南京大学新闻传播学院数据新闻2017课程</p>
+<h1 class="mume-header" id="final-projects">Final Projects</h1>
+
+<table>
+<thead>
+<tr>
+<th>Group</th>
+<th style="text-align:center">Title</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>朱清华 彭雅琦</td>
+<td style="text-align:center"><a href="./group/allweeks/index.html">媒体报道中的高学历女性污名化情况</a></td>
+</tr>
+<tr>
+<td>徐妙 冼芷卉 夏艺菡</td>
+<td style="text-align:center"><a href="./group/bigdata/index.html">你买得起房吗？</a></td>
+</tr>
+<tr>
+<td>王一珺 叶霁萱 沈欣</td>
+<td style="text-align:center"><a href="https://shen.netlify.com/">国宝特攻带你走近国家宝藏</a> 【<a href="./group/grandpa-say/data/">附件</a>】</td>
+</tr>
+<tr>
+<td>张鑫宇 周琪 周围子</td>
+<td style="text-align:center"><a href="./group/kaopu/index.html">基于经济状况的中国五大教基本情况分析——以CFPS中国家庭数据追踪调查2012年的数据为基础</a></td>
+</tr>
+<tr>
+<td>贾聪 蔡兆钦 郑书遥 刘妍彤</td>
+<td style="text-align:center"><a href="./group/legend/index.html">数据画像｜你会在婚恋网站上遇到什么样的TA？</a></td>
+</tr>
+<tr>
+<td>岳琬琪 卞文钰 谢纯纯</td>
+<td style="text-align:center"><a href="./group/mbadj/index.html">中国各大高校校名流变</a></td>
+</tr>
+<tr>
+<td>刘树琦 刘晓濛 苟泽鹏</td>
+<td style="text-align:center"><a href="./group/nothing-is-correct/index.html">格莱美奖：从过去到未来</a></td>
+</tr>
+<tr>
+<td>张司珏 孙远 赵玥 张安</td>
+<td style="text-align:center"><a href="./group/python911/index.html">今年，你在江苏买的起房吗？</a></td>
+</tr>
+<tr>
+<td>征梦婷 陈阳阳 贾威</td>
+<td style="text-align:center"><a href="./group/save-our-hairline/index.html">2007-2016: 一滴水的十年踪迹</a></td>
+</tr>
+<tr>
+<td>周旦烨 胡雪菲 罗昊</td>
+<td style="text-align:center"><a href="./group/sjxw/index.html">八张图带你看清当代人们的阅读习惯和偏好</a></td>
+</tr>
+<tr>
+<td>李铁薇</td>
+<td style="text-align:center"><a href="./group/tiewei/index.html">数据科学从业者画像 WHAT DO YOU KNOW ABOUT A DATA SCIENTIST?	</a></td>
+</tr>
+</tbody>
+</table>
+<h1 class="mume-header" id="content">Content</h1>
+
 <table>
 <thead>
 <tr>
@@ -312,62 +370,6 @@ code.language-yaml {
 </tr>
 </tbody>
 </table>
-<h1 class="mume-header" id="final-projects">Final Projects</h1>
-
-<table>
-<thead>
-<tr>
-<th>Group</th>
-<th style="text-align:center">Title</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>朱清华 彭雅琦</td>
-<td style="text-align:center"><a href="./group/allweeks/index.html">媒体报道中的高学历女性污名化情况</a></td>
-</tr>
-<tr>
-<td>徐妙 冼芷卉 夏艺菡</td>
-<td style="text-align:center"><a href="./group/bigdata/index.html">你买得起房吗？</a></td>
-</tr>
-<tr>
-<td>王一珺 叶霁萱 沈欣</td>
-<td style="text-align:center"><a href="https://shen.netlify.com/">国宝特攻带你走近国家宝藏</a> 【<a href="./group/grandpa-say/data/">附件</a>】</td>
-</tr>
-<tr>
-<td>张鑫宇 周琪 周围子</td>
-<td style="text-align:center"><a href="./group/kaopu/index.html">基于经济状况的中国五大教基本情况分析——以CFPS中国家庭数据追踪调查2012年的数据为基础</a></td>
-</tr>
-<tr>
-<td>贾聪 蔡兆钦 郑书遥 刘妍彤</td>
-<td style="text-align:center"><a href="./group/legend/index.html">数据画像｜你会在婚恋网站上遇到什么样的TA？</a></td>
-</tr>
-<tr>
-<td>岳琬琪 卞文钰 谢纯纯</td>
-<td style="text-align:center"><a href="./group/mbadj/index.html">中国各大高校校名流变</a></td>
-</tr>
-<tr>
-<td>刘树琦 刘晓濛 苟泽鹏</td>
-<td style="text-align:center"><a href="./group/nothing-is-correct/index.html">格莱美奖：从过去到未来</a></td>
-</tr>
-<tr>
-<td>张司珏 孙远 赵玥 张安</td>
-<td style="text-align:center"><a href="./group/python911/index.html">今年，你在江苏买的起房吗？</a></td>
-</tr>
-<tr>
-<td>征梦婷 陈阳阳 贾威</td>
-<td style="text-align:center"><a href="./group/save-our-hairline/index.html">2007-2016: 一滴水的十年踪迹</a></td>
-</tr>
-<tr>
-<td>周旦烨 胡雪菲 罗昊</td>
-<td style="text-align:center"><a href="./group/sjxw/index.html">八张图带你看清当代人们的阅读习惯和偏好</a></td>
-</tr>
-<tr>
-<td>李铁薇</td>
-<td style="text-align:center"><a href="./group/tiewei/index.html">数据科学从业者画像 WHAT DO YOU KNOW ABOUT A DATA SCIENTIST?	</a></td>
-</tr>
-</tbody>
-</table>
 <h1 class="mume-header" id="&#x8BF7;&#x9009;&#x8BFE;&#x7684;&#x540C;&#x5B66;watch&#x672C;&#x9875;&#x9762;">请选课的同学watch本页面</h1>
 
 <p>点击页面右上角watch按钮即可，这样你可以收到最新的issues的邮件提醒。</p>
@@ -412,6 +414,7 @@ code.language-yaml {
       <div class="md-sidebar-toc"><ul>
 <li><a href="#%E6%95%B0%E6%8D%AE%E6%96%B0%E9%97%BB2017%E8%AF%BE%E7%A8%8B">《数据新闻》2017课程</a></li>
 <li><a href="#final-projects">Final Projects</a></li>
+<li><a href="#content">Content</a></li>
 <li><a href="#%E8%AF%B7%E9%80%89%E8%AF%BE%E7%9A%84%E5%90%8C%E5%AD%A6watch%E6%9C%AC%E9%A1%B5%E9%9D%A2">请选课的同学watch本页面</a></li>
 <li><a href="#%E6%AF%8F%E5%91%A8%E7%AD%BE%E5%88%B0%E6%83%85%E5%86%B5">每周签到情况</a></li>
 <li><a href="#%E6%9C%AC%E5%91%A8%E4%BD%9C%E4%B8%9A%E4%BF%A1%E6%81%AF%E5%8F%91%E5%B8%83">本周作业信息发布</a><br>
