--- a/group/zrw/echarts/2010-2015届本科毕业生留学主要研究生专业类分布.html
+++ b/group/zrw/echarts/2010-2015届本科毕业生留学主要研究生专业类分布.html
@@ -5,15 +5,7 @@
    </head>
    <body style="height: 100%; margin: 0">
        <div id="container" style="height: 100%"></div>
-       <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/echarts.min.js"></script>
-       <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts-gl/echarts-gl.min.js"></script>
-       <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts-stat/ecStat.min.js"></script>
-       <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/extension/dataTool.min.js"></script>
-       <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/map/js/china.js"></script>
-       <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/map/js/world.js"></script>
-       <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=ZUONbpqGBsYGXNIYHicvbAbM"></script>
-       <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/extension/bmap.min.js"></script>
-       <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/simplex.js"></script>
+       <script type="text/javascript" src="echarts.min.js"></script>
        <script type="text/javascript">
 var dom = document.getElementById("container");
 var myChart = echarts.init(dom);
@@ -40,13 +32,13 @@ option = {
             name: '科学技术'
         }, {
             name: '社会科学'
-        }, { 
+        }, {
             name: '外国语言文学'
         }, {
             name: '艺术学'
         }, {
             name: '教育学'
-        }, { 
+        }, {
             name: '传播与新闻学'
         }, {
             name: '建筑学'
@@ -65,7 +57,7 @@ option = {
         }, {
             name: '2010'
         }],
-        
+
         links: [{
             source: '工程科学',
             target: '2015',
