--- a/index.html
+++ b/index.html
@@ -226,6 +226,10 @@ code.language-yaml {
 <td style="text-align:center"><a href="./group/zrw/index.html">走出去与走回来 — 中国留学生去向情况调查</a></td>
 </tr>
 <tr>
+<td>陈必欣 陈景玥 彭书慧</td>
+<td style="text-align:center"><a href="./group/lxz/index.html">全国幼儿园哪里最好？——我国各省学前教育水平状况调查</a></td>
+</tr>
+<tr>
 <td>朱清华 彭雅琦</td>
 <td style="text-align:center"><a href="./group/allweeks/index.html">媒体报道中的高学历女性污名化情况</a></td>
 </tr>
